[B]2024-04-07 - v5.0.302[/B]
             
Further minor fixes now Omega is released

[B]2024-04-07 - v5.0.103[/B]
             
Minor Fixes now Omega is released

[B]2024-04-07 - v5.0.102[/B]
             
Hitcher Omega changes to 2024-04-07

[B]2024-03-26 - v5.0.101[/B]

Integrate Hitcher's Nexus changes up to 5.0.1
Various b808 tweaks (reduce more white, tidy up VideoFullScreen/DialogSeekbar)
Re-integrate standard Confluence weather for anyone not using OzWeather

[B]4.8.0101[/B]

Integrate Hitcher's Nexus changes up to 4.8.01

[B]4.7.1513[/B]

End of the festive season...

[B]4.7.1512[/B]

It's beginning to feel a lot like Christmas...

[B]4.7.1511[/B]

Backport of Omega changes

[B]4.7.1509[/B]

Minor tweak to Home.xml so custom nodes work the way I want
Remove non English languages

[B]4.7.1508[/B]

Changes for OzWeather/ABC Video
Auto hide video info on unpause

[B]4.7.1507[/B]

Sync upstream Nexus branch

[B]4.7.1506[/B]

Latest changes per the review of my PR to the 'real' Confluence
https://github.com/xbmc/skin.confluence/pull/194

[B]4.7.1505[/B]

Stop Artist Slideshow from cropping or warping images 

[B]4.7.1504[/B]

Add Colour Picker
Add new MyFavourites window
Fixes for CULyrics

[B]4.7.1503[/B]

Use the actual Confluence texture for subs location, and remove floor in a bunch more places

[B]4.7.1502[/B]

Start work on Nexus skin.
