@@ -178,95 +178,6 @@
 			<size>14</size>
 		</font>
 	</fontset>
-	<fontset id="DefaultNoCaps" idloc="31391">
-		<!-- Normal Fonts -->
-		<font>
-			<name>font10</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>21</size>
-		</font>
-		<font>
-			<name>font12</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>26</size>
-		</font>
-		<font>
-			<name>font13</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>30</size>
-		</font>
-		<font>
-			<name>font14</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>33</size>
-		</font>
-		<font>
-			<name>font16</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>38</size>
-		</font>
-		<font>
-			<name>font30</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>45</size>
-		</font>
-		<font>
-			<name>fontContextMenu</name>
-			<filename>Roboto-Regular.ttf</filename>
-			<size>27</size>
-		</font>
-		<!-- Title Fonts -->
-		<font>
-			<name>font10_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>18</size>
-		</font>
-		<font>
-			<name>font12_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>26</size>
-		</font>
-		<font>
-			<name>font13_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>30</size>
-		</font>
-		<font>
-			<name>font24_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>36</size>
-		</font>
-		<font>
-			<name>font28_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>42</size>
-		</font>
-		<font>
-			<name>font30_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>45</size>
-		</font>
-		<font>
-			<name>font35_title</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>53</size>
-		</font>
-		<font>
-			<name>font_MainMenu</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>60</size>
-		</font>
-		<font>
-			<name>WeatherTemp</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>120</size>
-		</font>
-		<font>
-			<name>OSDPlaySpeed</name>
-			<filename>Roboto-Bold.ttf</filename>
-			<size>14</size>
-		</font>
-	</fontset>
 	<fontset id="Arial" idloc="31392">
 		<!-- Arial Font better for non English -->
 		<font>
