@@ -1,3 +1,7 @@
+[B]2024-04-10 - v5.0.303[/B]
+
+Merge in all the Omega changes from Hitcher to 2024-04-10
+
 [B]2024-04-07 - v5.0.302[/B]
              
 Further minor fixes now Omega is released
